load-tests/cache/deployment/cache.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "cache"
  name: "cache-svc"
spec:
  ports:
  - name: "port-1-cache-sv"
    port: 9092
    protocol: "TCP"
    targetPort: 9092
  selector:
    app: "cache"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "cache"
  name: "cache-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "cache"
  template:
    metadata:
      labels:
        app: "cache"
    spec:
      containers:
      - env:
        - name: "BAL_CONFIG_FILES"
          value: "/home/ballerina/conf/Config.toml:"
        image: "ashakalai/cache:latest"
        lifecycle:
          preStop:
            exec:
              command:
              - "sleep"
              - "15"
        name: "cache-deployment"
        ports:
        - containerPort: 9092
          name: "port-1-cache-sv"
          protocol: "TCP"
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
        - mountPath: "/home/ballerina/conf/"
          name: "config-config-map-volume"
          readOnly: false
      nodeSelector: {}
      volumes:
      - configMap:
          name: "config-config-map"
        name: "config-config-map-volume"
